--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Kotserver"]
 	path = Kotserver
 	url = https://github.com/AlbatovK/Kotserver.git
+[submodule "kotserver"]
+	path = kotserver
+	url = https://github.com/AlbatovK/Kotserver.git
